--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 Backend/MCQ_SS
 **/.DS_Store
 
-
-
-
-
 # Logs
 logs
 *.log
@@ -97,7 +93,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+./dist
 
 # Gatsby files
 .cache/
